--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "@react-navigation/native": "^7.0.18",
     "@react-navigation/native-stack": "^7.3.2",
-    "expo": "~52.0.40",
+    "expo": "^52.0.41",
     "expo-status-bar": "~2.0.1",
+    "formik": "^2.4.6",
     "react": "18.3.1",
     "react-native": "0.76.7",
-    "react-native-gesture-handler": "^2.24.0",
-    "react-native-safe-area-context": "^5.3.0",
-    "react-native-screens": "^4.9.2"
+    "react-native-formik": "^1.7.8",
+    "react-native-gesture-handler": "^2.14.0",
+    "react-native-safe-area-context": "^4.6.3",
+    "react-native-screens": "^4.4.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
